--- a/index.html
+++ b/index.html
@@ -2,9 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Dark_Site</title>
+    <link rel="stylesheet" href="assets/themify-icons/css/themify-icons.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="normalize.css">
+
 </head>
-<body>
+<body id="body">
+<header id="header" class="header">
+    <ul class="social-icons">
+        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+        <li><a href="#"><i class="fa fa-github"></i></a></li>
+    </ul>
+    <aside>
+    <h4>Hello, I am</h4>
+    <h1>Sayani Nethmi</h1>
+    <h6>Front-end Developer | Designer</h6>
+    </aside>
+</header>
 
 </body>
 </html>
