--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="assets/themify-icons/css/themify-icons.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="normalize.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,500,500i,600,600i,700,700i&subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body id="body">
+<body >
 <header id="header" class="header">
     <ul class="social-icons">
         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -18,12 +19,30 @@
         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
         <li><a href="#"><i class="fa fa-github"></i></a></li>
     </ul>
-    <aside>
-    <h4>Hello, I am</h4>
-    <h1>Sayani Nethmi</h1>
-    <h6>Front-end Developer | Designer</h6>
-    </aside>
+<div>
+    <h4>Hello There,</h4>
+    <h1 style="margin-top: -33px">I'm Sayani Nethmi</h1>
+    <h6 style="margin-top: -33px">Full Stack Developer | Designer</h6>
+<!--    <div class="back-arrow-container">-->
+<!--        <a href="#" class="back-arrow">-->
+<!--            <i class="bi bi-chevron-left"></i>-->
+<!--        </a>-->
+<!--        <a href="#" class="back-arrow">-->
+<!--            <i class="bi bi-chevron-left"></i>-->
+<!--        </a>-->
+<!--    </div>-->
+</div>
 </header>
+<nav id="navbar" class="navbar">
+    <ul>
+        <li><a href="#home" >Home</a></li>
+        <li><a href="#about" >About</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#assignment">Assignment</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
 
 </body>
 </html>
