--- a/index.html
+++ b/index.html
@@ -7,42 +7,198 @@
     <link rel="stylesheet" href="assets/themify-icons/css/themify-icons.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,500,500i,600,600i,700,700i&subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,500,500i,600,600i,700,700i&subset=cyrillic"
+          rel="stylesheet">
+    <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
 </head>
-<body >
+<body>
 <header id="header" class="header">
-    <ul class="social-icons">
-        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-        <li><a href="#"><i class="fa fa-github"></i></a></li>
-    </ul>
-<div>
-    <h4>Hello There,</h4>
-    <h1 style="margin-top: -33px">I'm Sayani Nethmi</h1>
-    <h6 style="margin-top: -33px">Full Stack Developer | Designer</h6>
-<!--    <div class="back-arrow-container">-->
-<!--        <a href="#" class="back-arrow">-->
-<!--            <i class="bi bi-chevron-left"></i>-->
-<!--        </a>-->
-<!--        <a href="#" class="back-arrow">-->
-<!--            <i class="bi bi-chevron-left"></i>-->
-<!--        </a>-->
-<!--    </div>-->
-</div>
+    <div class="container">
+        <ul class="social-icons" style="margin-top: 20px">
+            <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-facebook"
+                                                                                  aria-hidden="true"></i></a></li>
+            <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-twitter"
+                                                                                  aria-hidden="true"></i></a></li>
+            <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-google"
+                                                                                  aria-hidden="true"></i></a></li>
+            <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-instagram"
+                                                                                  aria-hidden="true"></i></a></li>
+            <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-github"
+                                                                                  aria-hidden="true"></i></a></li>
+        </ul>
+        <aside>
+            <h4>Hello There,</h4>
+            <h1 style="margin-top: -33px">I'm Sayani Nethmi</h1>
+            <h6 style="margin-top: -33px">Full Stack Developer | Designer</h6>
+            <!--    <div class="back-arrow-container">-->
+            <!--        <a href="#" class="back-arrow">-->
+            <!--            <i class="bi bi-chevron-left"></i>-->
+            <!--        </a>-->
+            <!--        <a href="#" class="back-arrow">-->
+            <!--            <i class="bi bi-chevron-left"></i>-->
+            <!--        </a>-->
+            <!--    </div>-->
+        </aside>
+    </div>
 </header>
 <nav id="navbar" class="navbar">
     <ul>
-        <li><a href="#home" >Home</a></li>
-        <li><a href="#about" >About</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#assignment">Assignment</a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
+    <!--    <div>-->
+    <!--        <h1 style="font-family: Montserrat;"><a href="index.html">Sayani</a></h1>-->
+    <!--    </div>-->
 </nav>
+<main id="main" class="main">
+    <!-- start about -->
+    <section class="about section " id="about">
+        <div class="container">
+            <div class="row">
+                <div class="section-title padd-15">
+                    <h2 style="color: white" data-aos="fade-right" data-aos-delay="500" data-aos-duration="300">ABOUT SAYANI</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="about-content padd-15">
+                    <div class="row">
+                        <div class="about-text padd-15">
+                            <h4 style="color: #da2843"
+                                    data-aos="fade-right" data-aos-duration="1000">DESIGNER &AMP; DEVELOPER
+                            </h4>
+                            <p data-aos="fade-zoom-in"
+                               data-aos-easing="ease-in-back"
+                               data-aos-delay="200"
+                               data-aos-duration="1200"
+                               data-aos-offset="0">
+                                I'm Third year student in IJSE(Institue of
+                                Software Engineering). I'm currently learning more about software
+                                Engineeing,web development and internet technologies. I like to improve my
+                                skills with working on projects. Also i have knowledge about web application
+                                design,UI/Ux design and javaFX.<br>
+                                I'm highly enthusiasic and a versatile individual with an easy going
+                                personality. pursuing to achieve a greater success through delivering the
+                                optimum contribution to the tech word and improve my career life by
+                                exercising my skill and knowledge in a dynamic and a challengeable working
+                                environment.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="personal-info padd-15">
+                            <div class="row">
+                                <div class="info-Item padd-15"><p>Name : <span data-aos="zoom-in" data-aos-delay="200"
+                                                                               data-aos-duration="1600">Sayani Nethmi.</span>
+                                </p></div>
+                                <div class="info-Item padd-15"><p>Age : <span data-aos="zoom-in" data-aos-delay="200"
+                                                                              data-aos-duration="1600">21.</span></p>
+                                </div>
+                                <div class="info-Item padd-15"><p>City : <span data-aos="zoom-in" data-aos-delay="200"
+                                                                               data-aos-duration="1600">Galle.</span>
+                                </p></div>
+                                <div class="info-Item padd-15"><p>Phone : <span data-aos="zoom-in" data-aos-delay="200"
+                                                                                data-aos-duration="1600">0775408818.</span>
+                                </p></div>
+                                <div class="info-Item padd-15"><p>Birthday : <span data-aos="zoom-in"
+                                                                                   data-aos-delay="200"
+                                                                                   data-aos-duration="1600">28 july 2002.</span>
+                                </p></div>
+                                <div class="info-Item padd-15"><p>Gender : <span data-aos="zoom-in" data-aos-delay="200"
+                                                                                 data-aos-duration="1600">Female.</span>
+                                </p></div>
+                                <div class="info-Item padd-15"><p>Study : <span data-aos="zoom-in" data-aos-delay="200"
+                                                                                data-aos-duration="1600">IJSE.</span>
+                                </p></div>
+                                <div class="info-Item padd-15"><p>Degree : <span data-aos="zoom-in" data-aos-delay="200"
+                                                                                 data-aos-duration="1600">Bsc(Hons)in SE.</span>
+                                </p></div>
+                            </div>
+                            <div class="row">
+                                <div class="buttons padd-15">
+                                    <a data-aos="zoom-in" data-aos-delay="900" class="btn" href="#">Download CV</a>
+                                    <a data-aos="zoom-in" data-aos-delay="1300" class="btn hire-me" href="#contact">
+                                        Hire Me</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!---------Skill add---------->
+<!--                        <div class="col-md-6 col-xs-11 wow fadeInRight" data-wow-delay="0.9s" id="skill">-->
+<!--                            <span class="text-top">Web Design <small>95%</small></span>-->
+<!--                            <div class="progress">-->
+<!--                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>-->
+<!--                            </div>-->
+<!--                            <span>Mobile Apps <small>80%</small></span>-->
+<!--                            <div class="progress">-->
+<!--                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>-->
+<!--                            </div>-->
+<!--                            <span>SEO Stuffs <small>70%</small></span>-->
+<!--                            <div class="progress">-->
+<!--                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>-->
+<!--                            </div>-->
+<!--                            <span>HTLM5 &AMP; CSS3 <small>90%</small></span>-->
+<!--                            <div class="progress">-->
+<!--                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+                        <div class="skills padd-15">
+                            <div class="row">
+                                <div class="skill-item padd-15">
+                                    <h5>CSS</h5>
+                                    <div class="progress">
+                                        <div class="progress-in" style="width: 76%;">
+                                            <div class="skill-percent">76%</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="skill-item padd-15">
+                                    <h5>JS</h5>
+                                    <div class="progress">
+                                        <div class="progress-in" style="width: 86%;">
+                                            <div class="skill-percent">86%</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="skill-item padd-15">
+                                    <h5>HTML</h5>
+                                    <div class="progress">
+                                        <div class="progress-in" style="width: 80%;">
+                                            <div class="skill-percent">80%</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="skill-item padd-15">
+                                    <h5>Bootstrap</h5>
+                                    <div class="progress">
+                                        <div class="progress-in" style="width: 85%;">
+                                            <div class="skill-percent">85%</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="skill-item padd-15">
+                                    <h5>JAVA</h5>
+                                    <div class="progress">
+                                        <div class="progress-in"  style="width: 80%;">
+                                            <div  class="skill-percent">80%</div>
+                                        </div>
+                                    </div>
+                                </div>
 
+                            </div>
+                        </div>
+                            </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
 </body>
 </html>
