--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#skills">Skills</a></li>
-        <li><a href="#assignment">Assignment</a></li>
+        <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
     <!--    <div>-->
@@ -60,7 +60,7 @@
         <div class="container">
             <div class="row">
                 <div class="section-title padd-15">
-                    <h2 style="color: white" data-aos="fade-right" data-aos-delay="500" data-aos-duration="300">ABOUT SAYANI</h2>
+                    <h2 style="color: white ;" data-aos="fade-right" data-aos-delay="500" data-aos-duration="300">ABOUT SAYANI</h2>
                 </div>
             </div>
             <div class="row">
@@ -68,7 +68,7 @@
                     <div class="row">
                         <div class="about-text padd-15">
                             <h4 style="color: #da2843"
-                                    data-aos="fade-right" data-aos-duration="1000">DESIGNER &AMP; DEVELOPER
+                                data-aos="fade-right" data-aos-duration="1000">DESIGNER &AMP; DEVELOPER
                             </h4>
                             <p data-aos="fade-zoom-in"
                                data-aos-easing="ease-in-back"
@@ -126,72 +126,104 @@
                             </div>
                         </div>
                         <!---------Skill add---------->
-<!--                        <div class="col-md-6 col-xs-11 wow fadeInRight" data-wow-delay="0.9s" id="skill">-->
-<!--                            <span class="text-top">Web Design <small>95%</small></span>-->
-<!--                            <div class="progress">-->
-<!--                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>-->
-<!--                            </div>-->
-<!--                            <span>Mobile Apps <small>80%</small></span>-->
-<!--                            <div class="progress">-->
-<!--                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>-->
-<!--                            </div>-->
-<!--                            <span>SEO Stuffs <small>70%</small></span>-->
-<!--                            <div class="progress">-->
-<!--                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>-->
-<!--                            </div>-->
-<!--                            <span>HTLM5 &AMP; CSS3 <small>90%</small></span>-->
-<!--                            <div class="progress">-->
-<!--                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>-->
-<!--                            </div>-->
-<!--                        </div>-->
+                        <!--                        <div class="col-md-6 col-xs-11 wow fadeInRight" data-wow-delay="0.9s" id="skill">-->
+                        <!--                            <span class="text-top">Web Design <small>95%</small></span>-->
+                        <!--                            <div class="progress">-->
+                        <!--                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>-->
+                        <!--                            </div>-->
+                        <!--                            <span>Mobile Apps <small>80%</small></span>-->
+                        <!--                            <div class="progress">-->
+                        <!--                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>-->
+                        <!--                            </div>-->
+                        <!--                            <span>SEO Stuffs <small>70%</small></span>-->
+                        <!--                            <div class="progress">-->
+                        <!--                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>-->
+                        <!--                            </div>-->
+                        <!--                            <span>HTLM5 &AMP; CSS3 <small>90%</small></span>-->
+                        <!--                            <div class="progress">-->
+                        <!--                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>-->
+                        <!--                            </div>-->
+                        <!--                        </div>-->
                         <div class="skills padd-15">
                             <div class="row">
                                 <div class="skill-item padd-15">
-                                    <h5>CSS</h5>
+                                    <h5>CSS 76%</h5>
                                     <div class="progress">
                                         <div class="progress-in" style="width: 76%;">
-                                            <div class="skill-percent">76%</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="skill-item padd-15">
-                                    <h5>JS</h5>
+                                    <h5>JS <small class="small">86%</small></h5>
                                     <div class="progress">
                                         <div class="progress-in" style="width: 86%;">
-                                            <div class="skill-percent">86%</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="skill-item padd-15">
-                                    <h5>HTML</h5>
+                                    <h5>HTML 80%</h5>
                                     <div class="progress">
                                         <div class="progress-in" style="width: 80%;">
-                                            <div class="skill-percent">80%</div>
                                         </div>
                                     </div>
                                 </div>
+<!--                                <div class="skill-item padd-15">-->
+<!--                                    <h5>Bootstrap 85%</h5>-->
+<!--                                    <div class="progress">-->
+<!--                                        <div class="progress-in" style="width: 85%;">-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
                                 <div class="skill-item padd-15">
-                                    <h5>Bootstrap</h5>
+                                    <h5>JAVA 80%</h5>
                                     <div class="progress">
-                                        <div class="progress-in" style="width: 85%;">
-                                            <div class="skill-percent">85%</div>
+                                        <div class="progress-in" style="width: 80%;">
                                         </div>
                                     </div>
                                 </div>
-                                <div class="skill-item padd-15">
-                                    <h5>JAVA</h5>
-                                    <div class="progress">
-                                        <div class="progress-in"  style="width: 80%;">
-                                            <div  class="skill-percent">80%</div>
-                                        </div>
-                                    </div>
-                                </div>
-
                             </div>
                         </div>
-                            </div>
+                    </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+<!--................Services................-->
+    <section class="services" id="services">
+        <div class="row">
+        <div class="heading">
+            <h2 style="color: white" data-aos="fade-right" data-aos-delay="500" data-aos-duration="300">SERVICES</h2>
+        </div>
+        </div>
+        <div class="services-content">
+            <!--box-1-->
+            <div class="services-box">
+                <i class="bx bx-code-alt"></i>
+                <h3>Web Development</h3>
+                <p>Web designers plan, create and code internet sites and web pages, many of which combine text with sounds, pictures, graphics and video clips. A web designer is responsible for creating the design and layout of a website or web pages. It and can mean working on a brand new website or updating an already existing site.</p>
+            </div>
+            <!--box-2-->
+            <div class="services-box">
+                <i class="bx bx-server"></i>
+                <h3>App Development</h3>
+                <p>The application designer gathers requirements from business systems analysts and end users. The application programmer is responsible for developing and maintaining application programs. The tasks of designing an application and developing one are distinct enough to treat each in a separate learning module.</p>
+            </div>
+            <!--box-3-->
+            <div class="services-box">
+                <i class="bx bx-brush"></i>
+                <h3>UI/UX Design</h3>
+                <p>A UX Designer focused on all aspects of a product's development,including design, usability, function, and even branding and marketing. Their work touches the entire end-to-end journey of a user's interaction with a product, and includes identifying new opportunities for the product and business.</p>
+            </div>
+            <!--box-4-->
+            <div class="services-box">
+                <i class="bx bx-pencil"></i>
+                <h3>Graphic Design</h3>
+                <p>Graphic designers create visual concepts,
+                    using computer software or by hand, to communicate ideas that inspire, inform, and captivate consumers. They develop the overall layout and production design for applications such as advertisements, brochures, magazines, and reports.</p>
+            </div>
+
+        </div>
         </div>
     </section>
 </main>
