--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#education">Education</a></li>
-        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
@@ -230,6 +230,17 @@
         </div>
         </div>
     </section>
+<!--    Projects   -->
+    <section class="projects" id="projects">
+        <div class="row">
+            <div class="heading">
+                <h2 style="color: white" data-aos="fade-right" data-aos-delay="500" data-aos-duration="300">PROJECTS</h2>
+            </div>
+        </div>
+
+    </section>
+
+
 </main>
 <script src="assets/js/jquery-3.6.1.min.js"></script>
 
