--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </ul>
         <aside>
             <h4>Hello There,</h4>
-            <h1 style="margin-top: -33px">I'm Sayani Nethmi</h1>
+            <h1 style="margin-top: -33px">I'm Sayani<span style="color: #da2843"> Nethmi</span> </h1>
             <h6 style="margin-top: -33px">Full Stack Developer | Designer</h6>
             <!--    <div class="back-arrow-container">-->
             <!--        <a href="#" class="back-arrow">-->
