--- a/index.html
+++ b/index.html
@@ -235,9 +235,49 @@
         <div class="row">
             <div class="heading">
                 <h2 style="color: white" data-aos="fade-right" data-aos-delay="500" data-aos-duration="300">PROJECTS</h2>
+                <h4 style="color: #da2843">CHECK OUT SOME OF MY WORKS.</h4>
+
             </div>
         </div>
 
+        <div class="project-container">
+            <div class="project" style="background-image: url(assets/img/project/Hostel.png)">
+            <a href="" target="_blank">
+                <div class="project-overlay">
+                    <h3>D24 Hostal</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <i class="fa-brands fa-github"></i>
+                </div>
+            </a>
+        </div>
+        <div class="project" style="background-image: url(assets/img/project/BlueOcean.png)">
+            <a href="" target="_blank">
+                <div class="project-overlay">
+                    <h3>Hotel Management System</h3>
+                    <p>This project is an event management system that allows users to create, view, and manage events.</p>
+                    <i class="fa-brands fa-github"></i>
+                </div>
+            </a>
+        </div>
+        <div class="project" style="background-image: url(assets/img/project/CherryClothing.png)">
+            <a href="" target="_blank">
+                <div class="project-overlay">
+                    <h3>Clothing System</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <i class="fa-brands fa-github"></i>
+                </div>
+            </a>
+        </div>
+        <div class="project" style="background-image: url(assets/img/project/CarRet.png)">
+            <a href="" target="_blank">
+                <div class="project-overlay">
+                    <h3>Car Rental System</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <i class="fa-brands fa-github"></i>
+                </div>
+            </a>
+        </div>
+        </div>
     </section>
 
 
