--- a/index.html
+++ b/index.html
@@ -232,13 +232,12 @@
     </section>
 <!--    Projects   -->
     <section class="projects" id="projects">
-        <div class="row">
-            <div class="heading">
+            <div class="heading1">
                 <h2 style="color: white" data-aos="fade-right" data-aos-delay="500" data-aos-duration="300">PROJECTS</h2>
                 <h4 style="color: #da2843">CHECK OUT SOME OF MY WORKS.</h4>
 
             </div>
-        </div>
+
 
         <div class="project-container">
             <div class="project" style="background-image: url(assets/img/project/Hostel.png)">
