--- a/index.html
+++ b/index.html
@@ -276,6 +276,24 @@
                 </div>
             </a>
         </div>
+            <div class="project" style="background-image: url(assets/img/project/Portfolio1.png)">
+                <a href="" target="_blank">
+                    <div class="project-overlay">
+                        <h3>My Portfolio</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <i class="fa-brands fa-github"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="project" style="background-image: url(assets/img/project/Dark.png)">
+                <a href="" target="_blank">
+                    <div class="project-overlay">
+                        <h3>Dark Portfolio</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <i class="fa-brands fa-github"></i>
+                    </div>
+                </a>
+            </div>
         </div>
     </section>
 
