--- a/index.html
+++ b/index.html
@@ -130,28 +130,10 @@
                             </div>
                         </div>
                         <!---------Skill add---------->
-                        <!--                        <div class="col-md-6 col-xs-11 wow fadeInRight" data-wow-delay="0.9s" id="skill">-->
-                        <!--                            <span class="text-top">Web Design <small>95%</small></span>-->
-                        <!--                            <div class="progress">-->
-                        <!--                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>-->
-                        <!--                            </div>-->
-                        <!--                            <span>Mobile Apps <small>80%</small></span>-->
-                        <!--                            <div class="progress">-->
-                        <!--                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>-->
-                        <!--                            </div>-->
-                        <!--                            <span>SEO Stuffs <small>70%</small></span>-->
-                        <!--                            <div class="progress">-->
-                        <!--                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>-->
-                        <!--                            </div>-->
-                        <!--                            <span>HTLM5 &AMP; CSS3 <small>90%</small></span>-->
-                        <!--                            <div class="progress">-->
-                        <!--                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>-->
-                        <!--                            </div>-->
-                        <!--                        </div>-->
                         <div class="skills padd-15">
                             <div class="row">
                                 <div class="skill-item padd-15">
-                                    <h5>CSS 76%</h5>
+                                    <h5>CSS <small class="small">76%</small></h5>
                                     <div class="progress">
                                         <div class="progress-in" style="width: 76%;">
                                         </div>
@@ -165,7 +147,7 @@
                                     </div>
                                 </div>
                                 <div class="skill-item padd-15">
-                                    <h5>HTML 80%</h5>
+                                    <h5>HTML <small class="small">80%</small></h5>
                                     <div class="progress">
                                         <div class="progress-in" style="width: 80%;">
                                         </div>
@@ -179,7 +161,7 @@
 <!--                                    </div>-->
 <!--                                </div>-->
                                 <div class="skill-item padd-15">
-                                    <h5>JAVA 80%</h5>
+                                    <h5>JAVA <small class="small">80%</small></h5>
                                     <div class="progress">
                                         <div class="progress-in" style="width: 80%;">
                                         </div>
@@ -241,7 +223,7 @@
 
         <div class="project-container">
             <div class="project" style="background-image: url(assets/img/project/Hostel.png)">
-            <a href="" target="_blank">
+            <a href="https://github.com/nethuh/Hostel-Management-System" target="_blank">
                 <div class="project-overlay">
                     <h3>D24 Hostal</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -259,7 +241,7 @@
             </a>
         </div>
         <div class="project" style="background-image: url(assets/img/project/CherryClothing.png)">
-            <a href="" target="_blank">
+            <a href="https://github.com/nethuh/CherryClothing" target="_blank">
                 <div class="project-overlay">
                     <h3>Clothing System</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -268,7 +250,7 @@
             </a>
         </div>
         <div class="project" style="background-image: url(assets/img/project/CarRet.png)">
-            <a href="" target="_blank">
+            <a href="https://github.com/nethuh/Easy-Car-Rental" target="_blank">
                 <div class="project-overlay">
                     <h3>Car Rental System</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -277,7 +259,7 @@
             </a>
         </div>
             <div class="project" style="background-image: url(assets/img/project/Portfolio1.png)">
-                <a href="" target="_blank">
+                <a href="https://nethuh.github.io/MyPortfolio/" target="_blank">
                     <div class="project-overlay">
                         <h3>My Portfolio</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
