--- a/index.html
+++ b/index.html
@@ -134,21 +134,24 @@
                         <div class="skills padd-15">
                             <div class="row">
                                 <div class="skill-item padd-15">
-                                    <h5>CSS <small class="small">76%</small></h5>
+                                    <h5>CSS <small data-aos="zoom-in" data-aos-delay="200"
+                                                   data-aos-duration="1600" class="small">76%</small></h5>
                                     <div class="progress">
                                         <div class="progress-in" style="width: 76%;">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="skill-item padd-15">
-                                    <h5>JS <small class="small">86%</small></h5>
+                                    <h5>JS <small data-aos="zoom-in" data-aos-delay="200"
+                                                  data-aos-duration="1600" class="small">86%</small></h5>
                                     <div class="progress">
                                         <div class="progress-in" style="width: 86%;">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="skill-item padd-15">
-                                    <h5>HTML <small class="small">80%</small></h5>
+                                    <h5>HTML <small data-aos="zoom-in" data-aos-delay="200"
+                                                    data-aos-duration="1600" class="small">80%</small></h5>
                                     <div class="progress">
                                         <div class="progress-in" style="width: 80%;">
                                         </div>
@@ -162,7 +165,8 @@
 <!--                                    </div>-->
 <!--                                </div>-->
                                 <div class="skill-item padd-15">
-                                    <h5>JAVA <small class="small">80%</small></h5>
+                                    <h5>JAVA <small data-aos="zoom-in" data-aos-delay="200"
+                                                    data-aos-duration="1600" class="small">80%</small></h5>
                                     <div class="progress">
                                         <div class="progress-in" style="width: 80%;">
                                         </div>
