--- a/index.html
+++ b/index.html
@@ -189,25 +189,25 @@
         </div>
         <div class="services-content">
             <!--box-1-->
-            <div class="services-box">
+            <div data-aos="zoom-out" data-aos-delay="300" class="services-box">
                 <i class="bx bx-code-alt"></i>
                 <h3>Web Development</h3>
                 <p>Web designers plan, create and code internet sites and web pages, many of which combine text with sounds, pictures, graphics and video clips. A web designer is responsible for creating the design and layout of a website or web pages. It and can mean working on a brand new website or updating an already existing site.</p>
             </div>
             <!--box-2-->
-            <div class="services-box">
+            <div data-aos="zoom-out" data-aos-delay="300" class="services-box">
                 <i class="bx bx-server"></i>
                 <h3>App Development</h3>
                 <p>The application designer gathers requirements from business systems analysts and end users. The application programmer is responsible for developing and maintaining application programs. The tasks of designing an application and developing one are distinct enough to treat each in a separate learning module.</p>
             </div>
             <!--box-3-->
-            <div class="services-box">
+            <div data-aos="zoom-out" data-aos-delay="300" class="services-box">
                 <i class="bx bx-brush"></i>
                 <h3>UI/UX Design</h3>
                 <p>A UX Designer focused on all aspects of a product's development,including design, usability, function, and even branding and marketing. Their work touches the entire end-to-end journey of a user's interaction with a product, and includes identifying new opportunities for the product and business.</p>
             </div>
             <!--box-4-->
-            <div class="services-box">
+            <div data-aos="zoom-out" data-aos-delay="300" class="services-box">
                 <i class="bx bx-pencil"></i>
                 <h3>Graphic Design</h3>
                 <p>Graphic designers create visual concepts,
