intro btn added

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <!--        </a>-->
             <!--    </div>-->
         </aside>
+        <div class="intro-button-container">
+            <a href="#about" class="intro-button">MORE ABOUT ME<i class="fa-sharp fa-solid fa-angle-down"></i></a>
+        </div>
     </div>
 </header>
 <nav id="navbar" class="navbar">
