--- a/index.html
+++ b/index.html
@@ -18,19 +18,6 @@
 </head>
 <body>
 <header id="header" class="header">
-    <div class="container">
-        <ul class="social-icons" style="margin-top: 20px">
-            <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-facebook"
-                                                                                  aria-hidden="true"></i></a></li>
-            <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-twitter"
-                                                                                  aria-hidden="true"></i></a></li>
-            <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-google"
-                                                                                  aria-hidden="true"></i></a></li>
-            <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-instagram"
-                                                                                  aria-hidden="true"></i></a></li>
-            <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-github"
-                                                                                  aria-hidden="true"></i></a></li>
-        </ul>
         <aside>
             <h4>Hello There,</h4>
             <h1 style="margin-top: -33px">I'm Sayani<span style="color: #da2843"> Nethmi</span> </h1>
@@ -44,10 +31,25 @@
             <!--        </a>-->
             <!--    </div>-->
         </aside>
+    <ul class="social-media">
+        <li>
+            <a href="" target="_blank" class="twitter">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="" target="_blank" class="instagram">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="" target="_blank" class="linkedin">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a href="" target="_blank" class="facebook">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+        </li>
+    </ul>
         <div class="intro-button-container">
             <a href="#about" class="intro-button">MORE ABOUT ME<i class="fa-sharp fa-solid fa-angle-down"></i></a>
         </div>
-    </div>
 </header>
 <nav id="navbar" class="navbar">
     <ul>
