--- a/index.html
+++ b/index.html
@@ -288,7 +288,13 @@
             </div>
         </div>
     </section>
+<section class="Contact" id="contact">
+    <div class="heading1">
+        <h2 style="color: white" data-aos="fade-right" data-aos-delay="500" data-aos-duration="300">CONTACT</h2>
+        <h4 style="color: #da2843">CHECK OUT SOME OF MY WORKS.</h4>
 
+    </div>
+</section>
 
 </main>
 <script src="assets/js/jquery-3.6.1.min.js"></script>
