--- a/index.html
+++ b/index.html
@@ -288,11 +288,10 @@
             </div>
         </div>
     </section>
-<section class="Contact" id="contact">
+<section class="contact" id="contact">
     <div class="heading1">
-        <h2 style="color: white" data-aos="fade-right" data-aos-delay="500" data-aos-duration="300">CONTACT</h2>
-        <h4 style="color: #da2843">CHECK OUT SOME OF MY WORKS.</h4>
-
+        <h2 style="color: white" >CONTACT</h2>
+        <h4 style="color: #da2843">HAVE YOU ANY QUESTIONS?</h4>
     </div>
 </section>
 
